--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Algorithm Visualizer Pro</title>
+    <title>Algorithm Visualizer</title>
     <meta
       name="description"
       content="Interactive visualizations for sorting and pathfinding algorithms"
@@ -25,7 +25,7 @@
       <header class="app-header">
         <div class="logo-container">
           <div class="logo">Algorithm Visualizer</div>
-          <span class="logo-badge">Pro</span>
+          <span class="logo-badge">By Jake Cochran</span>
         </div>
         <button
           class="mode-toggle"
@@ -268,7 +268,7 @@
       <footer class="app-footer">
         <div class="footer-content">
           <a
-            href="https://github.com/yourusername/algorithm-visualizer"
+            href="https://github.com/jecochran-0/algorithm_visualizer"
             target="_blank"
             rel="noopener noreferrer"
             class="github-link"
